--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>actionlib_msgs</depend>
-  <depend>can_msgs</depend>
+  <depend>mosquittopp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
