--- a/package.xml
+++ b/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rclcpp_mqtt_client</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>rclcpp_mqtt_client</description>
   <maintainer email="naru5135@wavem.net">reidlo</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
