refactor : apply mqtt into thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(rclcpp_mqtt_client)
 
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
-endif()
-
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
@@ -12,6 +8,13 @@ endif()
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
+
+include_directories(
+  include
+  include/${PROJECT_NAME}
+  /usr/local/include
+  /usr/local/include/mqtt
+)
 
 find_package(ament_cmake REQUIRED)
 find_package(rcl REQUIRED)
@@ -21,15 +24,9 @@ find_package(geometry_msgs REQUIRED)
 find_package(actionlib_msgs REQUIRED)
 find_library(PAHO_MQTT_CPP_LIB paho-mqttpp3 PATHS /usr/local/lib)
 
-include_directories(
-  include
-  include/${PROJECT_NAME}
-  /usr/local/include
-  /usr/local/include/mqtt
-)
-
-add_executable(ros_mqtt_bridge src/ros_mqtt_bridge.cpp src/mqtt/mqtt.cpp)
+add_executable(ros_mqtt_bridge src/ros_mqtt_bridge.cpp src/mqtt/mqtt.cpp src/main.cpp)
 target_link_libraries(ros_mqtt_bridge ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as)
+
 ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs)
 
 install(TARGETS
