--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,13 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(actionlib_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_library(PAHO_MQTT_CPP_LIB paho-mqttpp3 PATHS /usr/local/lib)
 
 add_executable(ros_mqtt_bridge src/ros_mqtt_bridge.cpp src/mqtt/mqtt.cpp src/main.cpp)
 target_link_libraries(ros_mqtt_bridge ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as)
 
-ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs)
+ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs nav_msgs)
 
 install(TARGETS
   ros_mqtt_bridge
