--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(
   include
   include/${PROJECT_NAME}
   include/ros_mqtt_bridge/
+  include/ros_connection_bridge/
   /usr/local/include
   /usr/local/include/mqtt
 )
@@ -29,15 +30,15 @@ find_library(PAHO_MQTT_CPP_LIB paho-mqttpp3 PATHS /usr/local/lib)
 add_executable(ros_mqtt_bridge src/ros_mqtt_bridge/ros_mqtt_bridge.cpp src/ros_mqtt_bridge/subscription/ros_subscription.cpp src/mqtt/mqtt.cpp src/main.cpp)
 target_link_libraries(ros_mqtt_bridge ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as)
 
-add_executable(ros_publisher src/ros_mqtt_bridge/publisher/ros_publisher.cpp src/mqtt/mqtt.cpp)
-target_link_libraries(ros_publisher ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as)
+add_executable(ros_connection_bridge src/ros_connection_bridge/ros_connection_bridge.cpp src/mqtt/mqtt.cpp)
+target_link_libraries(ros_connection_bridge ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as)
 
 ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs nav_msgs)
-ament_target_dependencies(ros_publisher rcl rclcpp std_msgs nav_msgs)
+ament_target_dependencies(ros_connection_bridge rcl rclcpp std_msgs nav_msgs)
 
 install(TARGETS
   ros_mqtt_bridge
-  ros_publisher
+  ros_connection_bridge
   DESTINATION lib/${PROJECT_NAME}
 )
 
