--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ ament_target_dependencies(ros_connection_bridge rcl rclcpp std_msgs geometry_msg
 
 add_executable(ros_mqtt_bridge src/ros_mqtt_bridge/ros_mqtt_bridge.cpp src/ros_mqtt_bridge/connections/ros_message_converter.cpp)
 target_link_libraries(ros_mqtt_bridge ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as jsoncpp)
-ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs)
+ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs tf2_msgs)
 
 install(TARGETS
   ros_connection_bridge
