--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>sensor_msgs</depend>
   <depend>actionlib_msgs</depend>
   <depend>nav_msgs</depend>
+  <depend>tf2_msgs</depend>
   <depend>jsoncpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
