feat : add test add_two_ints service client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,14 +27,15 @@ find_package(nav_msgs REQUIRED)
 find_package(nav2_msgs REQUIRED)
 find_package(tf2_msgs REQUIRED)
 find_package(jsoncpp REQUIRED)
+find_package(example_interfaces REQUIRED)
 find_library(PAHO_MQTT_CPP_LIB paho-mqttpp3 PATHS /usr/local/lib REQUIRED)
 
 add_executable(ros_connection_bridge src/ros_connection_bridge/ros_connection_bridge.cpp)
-ament_target_dependencies(ros_connection_bridge rcl rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs nav2_msgs tf2_msgs)
+ament_target_dependencies(ros_connection_bridge rcl rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs nav2_msgs tf2_msgs example_interfaces)
 
 add_executable(ros_mqtt_bridge src/ros_mqtt_bridge/ros_mqtt_bridge.cpp src/ros_mqtt_bridge/connections/ros_mqtt_message_converter.cpp)
 target_link_libraries(ros_mqtt_bridge ${PAHO_MQTT_CPP_LIB} -lpaho-mqtt3as jsoncpp)
-ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs nav2_msgs tf2_msgs)
+ament_target_dependencies(ros_mqtt_bridge rcl rclcpp std_msgs geometry_msgs sensor_msgs nav_msgs nav2_msgs tf2_msgs example_interfaces)
 
 install(TARGETS
   ros_connection_bridge
