--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <depend>nav2_msgs</depend>
   <depend>tf2_msgs</depend>
   <depend>jsoncpp</depend>
+  <depend>exmaple_interface</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
