refactor : rename project name

--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>rclcpp_mqtt_client</name>
+  <name>rclcpp_mqtt_bridge</name>
   <version>1.0.0</version>
-  <description>rclcpp_mqtt_client</description>
+  <description>rclcpp_mqtt_bridge</description>
   <maintainer email="naru5135@wavem.net">wavem-reidlo</maintainer>
   <license>Apache 2.0</license>
 
